force-app/main/default/objects/RC_question__c/RC_question__c.object-meta.xml
<CustomObject>
    <label>RC_question</label>
    <nameField>
        <label>RC_Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RC_questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>