force-app/main/default/objects/RC_question__c/fields/question_category__c.field-meta.xml
<CustomField>
    <fullName>question_category__c</fullName>
    <label>question_category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C Programming</fullName>
                <default>true</default>
                <label>C Programming</label>
            </value>
            <value>
                <fullName>Aptitude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>