force-app/main/default/objects/RC_question__c/fields/question_difficulty__c.field-meta.xml
<CustomField>
    <fullName>question_difficulty__c</fullName>
    <label>question_difficulty</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
                <default>true</default>
                <label>Easy</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>