force-app/main/default/objects/RC_question__c/recordTypes/Aptitude.recordType-meta.xml
<RecordType>
    <fullName>Aptitude</fullName>
    <active>true</active>
    <label>Aptitude</label>
</RecordType>