force-app/main/default/objects/RC_question__c/recordTypes/C_Programming.recordType-meta.xml
<RecordType>
    <fullName>C_Programming</fullName>
    <active>true</active>
    <label>C Programming</label>
</RecordType>